# watch_scripts

./: Cargo.toml  README.md
docs/: index.html
src/: main.rs
test-scripts/: post-run-test.bash
test-scripts/other-dir/: test.bash
test-scripts/sub-dir/: test-no-ext  test.bash
